tests/semantica/invalid/metodos/test10.ctds
program
    {
        integer foo(){
            return 2;
        }

        integer foo(){
            return 2;
        }
    }